<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_menu"
    tools:context=".AgregarGasto">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_gastos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/baloo_da"
        android:text="@string/agregarGasto"
        android:textSize="34dp"
        android:textColor="#B4B4B4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_salir_AG"
        android:layout_width="91dp"
        android:layout_height="47dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="654dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="@font/baloo_da"
        android:onClick="salir"
        android:text="@string/salir"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <CalendarView
        android:id="@+id/calendarView_AG"
        android:layout_width="359dp"
        android:layout_height="311dp"
        android:layout_marginTop="244dp"
        android:background="#E2FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_agregar_AG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="580dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="@font/baloo_da"
        android:onClick="guardarGasto"
        android:text="@string/agregar"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_descripcion_AG"
        android:layout_width="325dp"
        android:layout_height="46dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:hint="@string/descripcion"
        android:paddingStart="7dp"
        android:fontFamily="@font/poppins_medium"
        android:inputType="text"
        android:background="#E2FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAG"
        android:layout_width="382dp"
        android:layout_height="446dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:background="#E2FFFFFF"
        android:clickable="false"
        android:ems="10"
        android:elevation="-3dp"
        android:focusable="false"
        android:inputType="text"
        android:textIsSelectable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/en_AG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/cantidad"
        android:paddingStart="7dp"
        android:inputType="number"
        android:background="#E2FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>