<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_menu"
    tools:context=".MenuOpciones">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="278dp"
        android:layout_height="117dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/fondo_boton"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="text"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="278dp"
        android:layout_height="117dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/fondo_boton"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="text"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="278dp"
        android:layout_height="117dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/fondo_boton"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="text"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/libreta_icono" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/baloo_da"
        android:text="@string/diario"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_diario"
        android:layout_width="278dp"
        android:layout_height="117dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/transparente"
        android:elevation="10dp"
        android:fontFamily="@font/baloo_da"
        android:onClick="irDiario"
        android:text=""
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="512dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/monedas_icono" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="524dp"
        android:fontFamily="@font/baloo_da"
        android:text="@string/gastos"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_gastos"
        android:layout_width="278dp"
        android:layout_height="117dp"
        android:layout_marginTop="492dp"
        android:background="@drawable/transparente"
        android:elevation="10dp"
        android:onClick="irGastos"
        android:text=""
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="74dp"
        android:layout_height="70dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/planta_icono" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="328dp"
        android:fontFamily="@font/baloo_da"
        android:text="@string/produccion"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_produccion"
        android:layout_width="278dp"
        android:layout_height="117dp"
        android:layout_marginTop="296dp"
        android:background="@drawable/transparente"
        android:elevation="10dp"
        android:fontFamily="@font/baloo_da"
        android:onClick="irProduccion"
        android:text=""
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="115dp"
        android:layout_height="95dp"
        android:background="@drawable/boton_agregar_tierra"
        android:fontFamily="@font/baloo_da"
        android:gravity="start|center_vertical"
        android:onClick="irTerrenos"
        android:paddingStart="12dp"
        android:paddingBottom="15dp"
        android:text="@string/terrenos"
        android:textColor="@color/black"
        android:textSize="19dp"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nombreMO"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:background="@drawable/transparente"
        android:fontFamily="@font/baloo_da"
        android:paddingTop="8dp"
        android:text="@string/nombre"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>